package com.main;

/**
 * The class to containing and processing an information about a curator.
 *
 * @author Kostenko Roman
 */
public class Curator extends Student {

}
