package com.main;

/**
 * The class to containing and processing an information about a person.
 *
 * @author Kostenko Roman
 */
public abstract class Person {

}
