package com.main;

/**
 * The class to containing and processing an information about a student.
 *
 * @author Kostenko Roman
 */
public class Student extends Person {

}
