package com.main;

/**
 * The class to containing and processing an information about a subject.
 *
 * @author Kostenko Roman
 */
public class Subject {

}
